// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HorizontalStack renders default HorizontalStack correctly 1`] = `
<div
  className=
      ms-HorizontalStack
      {
        box-sizing: border-box;
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        height: auto;
        width: auto;
      }
      & > * {
        text-overflow: ellipsis;
        white-space: nowrap;
      }
      & > *:not(:empty) ~ * {
        margin-left: 0px;
      }
      & > *:empty {
        display: none;
      }
      & > *:not(.ms-StackItem) {
        flex-shrink: 0;
      }
>
  <div>
    Item 1
  </div>
  <div>
    Item 2
  </div>
</div>
`;

exports[`HorizontalStack renders gap correctly 1`] = `
<div
  className=
      ms-HorizontalStack
      {
        box-sizing: border-box;
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        height: auto;
        width: auto;
      }
      & > * {
        text-overflow: ellipsis;
        white-space: nowrap;
      }
      & > *:not(:empty) ~ * {
        margin-left: 5px;
      }
      & > *:empty {
        display: none;
      }
      & > *:not(.ms-StackItem) {
        flex-shrink: 0;
      }
>
  <div>
    Item 1
  </div>
  <div>
    Item 2
  </div>
</div>
`;

exports[`HorizontalStack renders growing items correctly 1`] = `
<div
  className=
      ms-HorizontalStack
      {
        box-sizing: border-box;
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        height: auto;
        width: auto;
      }
      & > * {
        text-overflow: ellipsis;
        white-space: nowrap;
      }
      & > *:not(:empty) ~ * {
        margin-left: 0px;
      }
      & > *:empty {
        display: none;
      }
      & > *:not(.ms-StackItem) {
        flex-shrink: 0;
      }
>
  <span
    className=
        ms-StackItem
        {
          flex-shrink: 0;
          height: auto;
          width: auto;
        }
  >
    Item 1
  </span>
  <span
    className=
        ms-StackItem
        {
          flex-shrink: 0;
          height: auto;
          width: auto;
        }
  >
    Item 2
  </span>
</div>
`;

exports[`HorizontalStack renders item alignments correctly 1`] = `
<div
  className=
      ms-HorizontalStack
      {
        box-sizing: border-box;
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        height: auto;
        width: auto;
      }
      & > * {
        text-overflow: ellipsis;
        white-space: nowrap;
      }
      & > *:not(:empty) ~ * {
        margin-left: 0px;
      }
      & > *:empty {
        display: none;
      }
      & > *:not(.ms-StackItem) {
        flex-shrink: 0;
      }
>
  <span
    className=
        ms-StackItem
        {
          align-self: auto;
          flex-shrink: 0;
          height: auto;
          width: auto;
        }
  >
    Auto
  </span>
  <span
    className=
        ms-StackItem
        {
          align-self: stretch;
          flex-shrink: 0;
          height: auto;
          width: auto;
        }
  >
    Stretch
  </span>
  <span
    className=
        ms-StackItem
        {
          align-self: baseline;
          flex-shrink: 0;
          height: auto;
          width: auto;
        }
  >
    Baseline
  </span>
  <span
    className=
        ms-StackItem
        {
          align-self: flex-start;
          flex-shrink: 0;
          height: auto;
          width: auto;
        }
  >
    Start
  </span>
  <span
    className=
        ms-StackItem
        {
          align-self: center;
          flex-shrink: 0;
          height: auto;
          width: auto;
        }
  >
    Center
  </span>
  <span
    className=
        ms-StackItem
        {
          align-self: flex-end;
          flex-shrink: 0;
          height: auto;
          width: auto;
        }
  >
    End
  </span>
</div>
`;

exports[`HorizontalStack renders shrinking items correctly 1`] = `
<div
  className=
      ms-HorizontalStack
      {
        box-sizing: border-box;
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        height: auto;
        width: auto;
      }
      & > * {
        text-overflow: ellipsis;
        white-space: nowrap;
      }
      & > *:not(:empty) ~ * {
        margin-left: 0px;
      }
      & > *:empty {
        display: none;
      }
      & > *:not(.ms-StackItem) {
        flex-shrink: 1;
      }
>
  <span
    className=
        ms-StackItem
        {
          flex-shrink: 1;
          height: auto;
          width: auto;
        }
  >
    Item 1
  </span>
  <span
    className=
        ms-StackItem
        {
          flex-shrink: 0;
          height: auto;
          width: auto;
        }
  >
    Item 2
  </span>
</div>
`;

exports[`HorizontalStack renders wrapped HorizontalStack correctly 1`] = `
<div
  className=
      ms-HorizontalStack
      {
        display: block;
        height: auto;
        overflow: visible;
        padding-top: 1px;
        width: auto;
      }
>
  <div
    className=
        ms-HorizontalStack-inner
        {
          box-sizing: border-box;
          display: flex;
          flex-direction: row;
          flex-wrap: wrap;
          height: auto;
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: calc(0px - 1px);
          overflow: visible;
          width: auto;
        }
        & > * {
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
          max-width: calc(100% - 0px);
          text-overflow: ellipsis;
          white-space: nowrap;
        }
        & > *:empty {
          display: none;
        }
        & > *:not(.ms-StackItem) {
          flex-shrink: 0;
        }
  >
    <span
      className=
          ms-StackItem
          {
            flex-shrink: 0;
            height: auto;
            width: auto;
          }
    >
      1
    </span>
    <span
      className=
          ms-StackItem
          {
            flex-shrink: 0;
            height: auto;
            width: auto;
          }
    >
      2
    </span>
    <span
      className=
          ms-StackItem
          {
            flex-shrink: 0;
            height: auto;
            width: auto;
          }
    >
      3
    </span>
  </div>
</div>
`;
